feat: add notification module
