# routes/index.js
@@ -4,6 +4,7 @@ const sinisterRoutes = require('./sinisters')
 const documentRoutes = require('./documents')
 const folderRoutes = require('./folders')
 const historyRoutes = require('./history')
+const notificationRoutes = require('./notifications')
 const logger = require('../core/logger')
 
 function initRoutes (app) {
@@ -13,6 +14,7 @@ function initRoutes (app) {
   app.use('/api/documents', documentRoutes)
   app.use('/api/folders', folderRoutes)
   app.use('/api/history', historyRoutes)
+  app.use('/api/notifications', notificationRoutes)
 
   app.get('/', (req, res, next) => {
     logger.debug('GET /')
@@ -26,7 +28,8 @@ function initRoutes (app) {
       sinisters: '/api/sinisters',
       documents: '/api/documents',
       folders: '/api/folders',
-      history: '/api/history'
+      history: '/api/history',
+      notifications: '/api/notifications'
     })
   })
 }
